--- a/addons/ThemeExport.plugin/config.yaml
+++ b/addons/ThemeExport.plugin/config.yaml
@@ -1,7 +1,10 @@
 id: ThemeExport
 name: 'Theme Exporter'
 description: "A plugin that provides a simple user interface for exporting a blog's templates into an easily distributable theme."
-version: 0.2
+plugin_author: 'Endevver, LLC.'
+plugin_link: 'http://endevver.com/plugins/theme-export/'
+version: 1.0
+static_version: 1
 
 applications:
   cms:
